--- a/Learning tasks/3.3 Image Elements/index.html
+++ b/Learning tasks/3.3 Image Elements/index.html
@@ -5,4 +5,4 @@
 
 <!-- Puppy image URL -->
 <h1>I am a Dog Person</h1>
-<img scr="https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif" alt="Dog in the sand"/>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif" alt="Dog in the sand"/>
