--- a/Learning tasks/CSS tasks/6.1 CSS Text Properties/index.html
+++ b/Learning tasks/CSS tasks/6.1 CSS Text Properties/index.html
@@ -5,6 +5,31 @@
   <meta charset="UTF-8">
   <title>CSS Properties</title>
   <style>
+
+    html {
+      font-size: 30px;
+    }
+
+    .color{
+      color: #FFB1B1;
+    }
+
+    #rem {
+      font-size: 50pt;
+    }
+
+    #cursive {
+      font-family: cursive;
+    }
+
+    #align{
+      text-align: right;
+    }
+
+    #weight{
+      font-weight: bold;
+    }
+
     body {
       background-color: cornflowerblue;
       color: white;
@@ -19,11 +44,11 @@
 
 <body>
   <h1>Important CSS Properties</h1>
-  <p>Color</p>
-  <p>Font Size</p>
-  <p>Font Weight</p>
-  <p>Font Family</p>
-  <p>Text Align</p>
+  <p class="color">Color</p>
+  <p id="rem">Font Size</p>
+  <p id="weight">Font Weight</p>
+  <p id="cursive">Font Family</p>
+  <p id="align">Text Align</p>
 
   <!-- TODOs
   1. Change the color of <p>Color</p> to "coral" color.
