--- a/Learning tasks/CSS tasks/6.3 CSS Box Model/solution.html
+++ b/Learning tasks/CSS tasks/6.3 CSS Box Model/solution.html
@@ -17,19 +17,19 @@
     #first {
       background-color: cadetblue;
       padding: 20px;
-      border: 10px solid black;
+      border: 10px, solid, black;
     }
 
     #second {
       background-color: gold;
-      border: solid black;
+      border: solid, black;
       border-width: 20px 10px;
       margin-left: 260px;
     }
 
     #third {
       background-color: indianred;
-      border: 10px solid black;
+      border: 10px, solid, black;
       margin-left: 40px;
     }
   </style>
