Added drum kit to my site

--- a/web-site for me/index.html
+++ b/web-site for me/index.html
@@ -71,6 +71,33 @@
             </div>
     </section>
 
+        <section id="drum">
+
+            <h1 id="title">Drum 🥁 Kit</h1>
+
+            <div class="container">
+
+                    <div class="row">
+
+                      <div button class="w drum col-1">W</button></div>
+
+                      <div button class="a drum col-1">A</button></div>
+
+                      <div button class="s drum col-1">S</button></div>
+
+                      <div button class="d drum col-1">D</button></div>
+
+                      <div button class="j drum col-1">J</button></div>
+
+                      <div button class="k drum col-1">K</button></div>
+
+                      <div button class="l drum col-1">L</button></div>
+              </div>
+            </div>
+      </section>
+      
+      <script src="./index.js"></script>
+
     <section id="skills">
         <div class="px-4 py-5 my-5 text-center">
             <h1>Skills</h1>
@@ -131,4 +158,4 @@
             </footer>
           </div>
     </section>
-</body>
+  </body>
