Added new page to my web site with game

--- a/web-site for me/index.html
+++ b/web-site for me/index.html
@@ -56,16 +56,16 @@
                     Studio Code, Azure, and SQL, this project provides an immersive gaming experience while also serving as a platform for
                     exploring data structures and applying SOLID principles.</p>
 
-                <p> <a class="btn btn-outline-light btn-lg px-4 me-md-2" href="https://github.com/Cherrymood/cafe_game">View details »</a></p>
+                <p> <a class="btn btn-outline-light btn-lg px-4 me-md-2" href="https://github.com/Cherrymood/cafe_game">View gitHub »</a></p>
               </div>
 
               <div class="col-lg-6">
                 <img class="project-img mt=3" src="./img/creative Studio.jpg" alt="web-dev">
-                <h2 class="fw-normal">Web-developing</h2>
+                <h2 class="fw-normal">Web-developing </h2>
                 <p>Web development involves creating and maintaining websites. It includes web design, content development, client/server-side scripting,
-                     and security configuration. Developers use HTML, CSS, JavaScript, and frameworks like React or Angular. They work on both front-end (user interface) 
-                     and back-end.</p>
-                <p><a class="btn btn-outline-light btn-lg px-4 me-md-2" href="https://github.com/Cherrymood/WebDeveloping">View details »</a></p>
+                     and security configuration. Developers use HTML, CSS, JavaScript, and frameworks like React. I work on both front-end (user interface) 
+                     and back-end. I have created some games - you can have fun with them.</p>
+                <p><a class="btn btn-outline-light btn-lg px-4 me-md-2" href="http://127.0.0.1:3000/Simon Game Challenge Starting Files/index.html">Play games »</a></p>
               </div>
 
             </div>
